<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.1.1</version>
	</parent>
	<groupId>fr.romainmoreau.epaper</groupId>
	<artifactId>e-paper</artifactId>
	<version>0.1.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<modules>
		<module>e-paper-client-api</module>
		<module>e-paper-client-common</module>
		<module>e-paper-client-javafx</module>
		<module>e-paper-client-common-uart</module>
		<module>e-paper-client-jserialcomm</module>
		<module>e-paper-jaxb-api</module>
		<module>e-paper-client-web</module>
		<module>e-paper-web-common</module>
		<module>e-paper-web-jserialcomm</module>
		<module>e-paper-web-javafx</module>
	</modules>
	<properties>
		<java.version>20</java.version>
	</properties>
	<repositories>
		<repository>
			<id>spring-milestones</id>
			<url>https://repo.spring.io/milestone</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>spring-milestones</id>
			<url>https://repo.spring.io/milestone</url>
		</pluginRepository>
	</pluginRepositories>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>fr.romainmoreau.epaper</groupId>
				<artifactId>e-paper-client-api</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fr.romainmoreau.epaper</groupId>
				<artifactId>e-paper-client-common</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fr.romainmoreau.epaper</groupId>
				<artifactId>e-paper-client-javafx</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fr.romainmoreau.epaper</groupId>
				<artifactId>e-paper-client-common-uart</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fr.romainmoreau.epaper</groupId>
				<artifactId>e-paper-client-jserialcomm</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fr.romainmoreau.epaper</groupId>
				<artifactId>e-paper-jaxb-api</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fr.romainmoreau.epaper</groupId>
				<artifactId>e-paper-web-common</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fazecast</groupId>
				<artifactId>jSerialComm</artifactId>
				<version>2.10.2</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-controls</artifactId>
				<version>20.0.1</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>